--- a/Code/ECMonitoring/Views/ECM/LANMetric.cshtml
+++ b/Code/ECMonitoring/Views/ECM/LANMetric.cshtml
@@ -1,3 +1,3 @@
 ﻿@model ECMonitoring.Models.MetricModel
 
-<p style="margin-left: 75px;">@Html.Label(Model.Name)</p>
+<p style="margin-left: 75px;">@Html.Label(Model.Name); @Html.Label(Model.StatusLanDevice.ToString()); @Html.Label(Model.HttpErrorsCount.ToString())</p>
