--- a/Code/ECMonitoring/Views/ECM/ResourceUsageMetric.cshtml
+++ b/Code/ECMonitoring/Views/ECM/ResourceUsageMetric.cshtml
@@ -1,3 +1,3 @@
 ﻿@model ECMonitoring.Models.MetricModel
 
-<p style="margin-left: 75px;">@Html.Label(Model.Name)</p>
+<p style="margin-left: 75px;">@Html.Label(Model.Name); @Html.Label(Model.MemoryUsage.ToString()); @Html.Label(Model.ProcessorTime.ToString())</p>
