--- a/Code/ECMonitoring/Views/ECM/IndexPrv.cshtml
+++ b/Code/ECMonitoring/Views/ECM/IndexPrv.cshtml
@@ -6,9 +6,9 @@
 
 @*<h2>Index</h2>*@
 
-@{
-    Layout = "~/Views/Shared/_EcmLayout.cshtml";
-}
+@*@{
+    Layout = null;// "~/Views/Shared/_Layout.cshtml";
+}*@
 
 <table>
     <tr>
@@ -92,6 +92,4 @@
     window.onload = ECMonitoring.TimerStart;
 
 </script>
-
-@section user_header {<span>@Model.UserName</span>}
 
