--- a/Code/ECMonitoring/Views/ECM/MainArea.cshtml
+++ b/Code/ECMonitoring/Views/ECM/MainArea.cshtml
@@ -1,6 +1,9 @@
 ﻿@model IList<ECMonitoring.Models.EndPointModel>
 
-<div style="background-color:darksalmon; border: 1px solid #000000; width: 800px; height: 600px">
+@*<div style="background-color:darksalmon; border: 1px solid #000000; width: 800px; height: 600px; margin: 75px 0 0 150px;">*@
+@*<div class="col-md-9">*@
+    <div id="main_area" style="background-color:darksalmon; border: 1px solid #000000; margin: 75px 0 0 250px; min-height: 600px;">
+@*<div style="background-color:darksalmon; border: 1px solid #000000; margin: 75px 0 0 0px;display:inline-block">*@
 
     <h2>Основная область</h2>
     <br />
@@ -26,3 +29,4 @@
         }
     }
 </div>
+@*</div>*@
