--- a/Code/ECMonitoring/Content/Ecm/main.css
+++ b/Code/ECMonitoring/Content/Ecm/main.css
@@ -1,27 +1,100 @@
-﻿.main_header {
-    /*color: yellow;*/
-    color: #9d9d9d;
-    font-size: 32px;
-    display: inline-block;
-    font-weight:700;
-    padding: 5px;
+﻿body {
+    /*padding: 75px 0 0 0;*/
+    padding: 0 0 0 0;
 }
 
-.user_header {
+.position_static {
+    position: static !important;
+    padding: 0px 0 0 0 !important;
+}
+
+.heder_panel {
+    background-color: #222222;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+h2, .h2 {
+    margin-bottom: 5px;
+}
+
+.loggin_shift {
+    padding: 150px 0 0 0;
+    /*background-color: aqua;*/
+}
+
+.main_header {
     color: #9d9d9d;
-    font-size: 18px;
+    font-size: 44px;
+    display: inline-block;
+    font-weight: 800;
+    padding: 3px 0 0 0;
+}
+
+/*.user_header {
+    color: #9d9d9d;
+    font-size: 21px;
     display: inline-block;
     float: right;
-}
+}*/
 
-.user_header_pad {
-    padding: 15px 0px 0 0;
-}
+/*.user_header_pad {
+    padding: 18px 0px 0 0;
+}*/
 
-.exit_header {
-    padding: 15px 0 0 7px;
-}
+/*.exit_header {
+    padding: 18px 0 0 7px;
+}*/
 
-.exit_header:hover {
+/*.exit_header:hover {
     color: white;
+}*/
+
+#nav_login {
+    float: right;
+    position: relative;
+    top: 12px;
+    right: 10px;
+}
+
+#nav_login p {
+    /*font-family: "Calibri", Helvetica, Arial, sans-serif;
+    font-size: 24px;
+    color: rgb(255,255,255);*/
+    font-size: 28px;
+    color: #9d9d9d;
+}
+
+/*#nav_login span.user_login {
+    text-transform: uppercase;
+}*/
+
+#nav_login span.user_logout {
+    font-size: 21px;
+}
+
+span.user_logout a {
+    /*color: #fff;*/
+    color: #9d9d9d;
+}
+
+span.user_logout a:link {
+    /*text-decoration: none*/
+}
+
+span.user_logout a:visited {
+    text-decoration: none
+}
+
+span.user_logout a:active {
+    text-decoration: none
+}
+
+span.user_logout a:hover {
+    /*text-decoration: underline;
+    color: red;*/
+    color: #fff;
 }
