--- a/Code/ECMonitoring/Views/ECM/LeftBar.cshtml
+++ b/Code/ECMonitoring/Views/ECM/LeftBar.cshtml
@@ -2,15 +2,31 @@
 
 
 
-<div style="background-color:lavender; border: 1px solid #000000; width: 300px; height: 600px">
-    <nav>
-        @*<h3>Navigation</h3>*@
-        <h2>Левая панель</h2>
-        <br />
+@*<div style="background-color:lavender; border: 1px solid #000000; width: 300px; height: 600px; position: fixed;">*@
+@*<div style="background-color:lavender; border: 1px solid #000000; width: 300px; position: fixed; min-height: 100%; overflow-y: scroll">*@
+@*<div style="background-color:lavender; border: 1px solid #000000; width: 300px; position: fixed; height: 100px; overflow-y: auto">*@
+@*<div style="background-color:lavender; border: 1px solid #000000; width: 300px; position: fixed; max-height: 50%; overflow-y: auto">*@
+@*<div style="background-color:lavender; border: 1px solid #000000; width: 300px; position: fixed; height: 90%; overflow-y: auto;">*@
+@*<nav class="navbar navbar-vertical navbar-expand-xl navbar-light">*@
+    @*<nav>*@
+    @*<h3>Navigation</h3>*@
+    @*<div class="collapse navbar-collapse">*@
+        @*<div class="navbar-vertical-content perfect-scrollbar scrollbar">*@
+@*<div class="col-md-3">*@
+    <div id="left_bar" style="background-color:lavender; border: 0px solid #000000; width: 250px; position: fixed; padding: 75px 0 0 0; z-index:0; height:675px">
+        <div style="background-color:aqua; border: 1px solid #000000; height: 100%; overflow-y: auto;  z-index:500;">
+            <h2>Левая панель</h2>
+            <br />
 
-        @foreach (var service in Model)
-        {
-            @Html.ActionLink(service.Name, "Index", new { serviceId = service.Id });<br />
-        }
-    </nav>
-</div>
+            @foreach (var service in Model)
+            {
+                @Html.ActionLink(service.Name, "Index", new { serviceId = service.Id });<br />
+            }
+        </div>
+    </div>
+@*</div>*@
+    @*</nav>*@
+    @*</div>*@
+    @*</div>*@
+    @*</nav>*@
+    @*</div>*@
