--- a/Code/ECMonitoring/Views/ECM/Login.cshtml
+++ b/Code/ECMonitoring/Views/ECM/Login.cshtml
@@ -1,18 +1,23 @@
 ﻿@model ECMonitoring.Models.LoginModel
 
 @{
-    ViewBag.Title = "Login";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_EcmLayout.cshtml";
 }
 
-<h2>Вход</h2>
+<div class="loggin_shift">
+    @*<h2>Вход</h2>
+        <h4>Для доступа в систему необходимо ввести имя и пароль:</h4>
+        <hr />*@
+    <h2>Вход</h2>
+    <h4>Для доступа в систему необходимо ввести имя и пароль:</h4>
+</div>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Для доступа в систему необходимо ввести имя и пароль:</h4>
+        @*<h4>Для доступа в систему необходимо ввести имя и пароль:</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -40,5 +45,5 @@
 }
 
 @*<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>*@
+        @Html.ActionLink("Back to List", "Index")
+    </div>*@
