--- a/Code/ECMonitoring/Views/ECM/LANMetric.cshtml
+++ b/Code/ECMonitoring/Views/ECM/LANMetric.cshtml
@@ -1,3 +1,5 @@
 ﻿@model ECMonitoring.Models.MetricModel
 
-<p style="margin-left: 75px;">@Html.Label(Model.Name); @Html.Label(Model.StatusLanDevice.ToString(), new { id = $"status_{Model.Id}" }); @Html.Label(Model.HttpErrorsCount.ToString(), new { id = $"httpErrorsCount_{Model.Id}" })</p>
+@*<div style="background-color:lavender; border: 1px solid #000000; width: 250px; float: left;">*@
+    <p style="margin-left: 15px;">@Html.Label(Model.Name); @Html.Label(Model.StatusLanDevice.ToString(), new { id = $"status_{Model.Id}" }); @Html.Label(Model.HttpErrorsCount.ToString(), new { id = $"httpErrorsCount_{Model.Id}" })</p>
+@*</div>*@
