--- a/Code/ECMonitoring/Views/ECM/MainArea.cshtml
+++ b/Code/ECMonitoring/Views/ECM/MainArea.cshtml
@@ -2,31 +2,53 @@
 
 @*<div style="background-color:darksalmon; border: 1px solid #000000; width: 800px; height: 600px; margin: 75px 0 0 150px;">*@
 @*<div class="col-md-9">*@
-    <div id="main_area" style="background-color:darksalmon; border: 1px solid #000000; margin: 75px 0 0 250px; min-height: 600px;">
-@*<div style="background-color:darksalmon; border: 1px solid #000000; margin: 75px 0 0 0px;display:inline-block">*@
+<div id="main_area" style="background-color: darksalmon; border: 1px solid #000000; margin: 75px 0 0 250px; min-height: 600px; padding: 25px; min-width: 370px">
+    @*<div style="background-color:darksalmon; border: 1px solid #000000; margin: 75px 0 0 0px;display:inline-block">*@
 
-    <h2>Основная область</h2>
+    @*<h2>Основная область</h2>*@
+    @*@{ViewData["ServiceName"] = "1234"; }*@
+    <h2>@ViewData["ServiceName"]</h2>
     <br />
 
-    @foreach (var endPoint in Model)
-    {
-        //@Html.ActionLink(service.Name, "Index", new { serviceId = endPoint.Id });<br />
-        @*@Html.Label(endPoint.Id.ToString())<br />*@
-        @*@Html.Label(endPoint.Name)<br />*@
+    @*<div class="container">*@
 
-        <p style="margin-left: 25px;">@Html.Label(endPoint.Name)</p>
-        foreach (var metric in endPoint.Metrics)
-        {
-            @*<p style="margin-left: 75px;">@Html.Label(metric.Name)</p>*@
-            if (metric.MetricType == 0)
+    <div style="background-color:antiquewhite; border: 1px solid #000000; padding: 25px">
+
+        <div class="row">
+
+            @foreach (var endPoint in Model)
             {
-                @Html.Partial("LANMetric", metric)
+                //@Html.ActionLink(service.Name, "Index", new { serviceId = endPoint.Id });<br />
+                @*@Html.Label(endPoint.Id.ToString())<br />*@
+                @*@Html.Label(endPoint.Name)<br />*@
+
+                @*<div class="col-md-6 col-xxl-3 mb-3 pr-md-2" style="background-color:lavender; border: 1px solid #000000; width: 250px; ">*@
+                <div class="col-md-6">
+                    <div class="end_point_main_container">
+
+
+                        <p style="margin-left: 15px;">@Html.Label(endPoint.Name)</p>
+
+                        @foreach (var metric in endPoint.Metrics)
+                        {
+                            @*<p style="margin-left: 75px;">@Html.Label(metric.Name)</p>*@
+                            if (metric.MetricType == 0)
+                            {
+                                @Html.Partial("LANMetric", metric)
+                            }
+                            else
+                            {
+                                @Html.Partial("ResourceUsageMetric", metric)
+                            }
+                        }
+                    </div>
+                </div>
             }
-            else
-            {
-                @Html.Partial("ResourceUsageMetric", metric)
-            }
-        }
-    }
+
+
+
+        </div>
+    </div>
+    @*</div>*@
 </div>
 @*</div>*@
