--- a/Code/ECMonitoring/Views/ECM/LeftBar.cshtml
+++ b/Code/ECMonitoring/Views/ECM/LeftBar.cshtml
@@ -13,10 +13,10 @@
     @*<div class="collapse navbar-collapse">*@
         @*<div class="navbar-vertical-content perfect-scrollbar scrollbar">*@
 @*<div class="col-md-3">*@
-    <div id="left_bar" style="background-color:lavender; border: 0px solid #000000; width: 250px; position: fixed; padding: 75px 0 0 0; z-index:0; height:675px">
-        <div style="background-color:aqua; border: 1px solid #000000; height: 100%; overflow-y: auto;  z-index:500;">
-            <h2>Левая панель</h2>
-            <br />
+    <div id="left_bar" class="left_bar_fixed">
+        <div class="left_bar">
+            @*<h2>Левая панель</h2>
+            <br />*@
 
             @*@foreach (var service in Model)
         {
