--- a/Code/ECMonitoring/Content/Ecm/main.css
+++ b/Code/ECMonitoring/Content/Ecm/main.css
@@ -2,6 +2,7 @@
     /*padding: 75px 0 0 0;*/
     padding: 0 0 0 0;
     background-color: #FCFCFF;
+    color: #33333D
 }
 
 .position_static {
@@ -10,7 +11,7 @@
 }
 
 .heder_panel {
-    background-color: #222222;
+    background-color: #22222C; /*#222222;*/
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
@@ -27,8 +28,12 @@ h2, .h2 {
     /*background-color: aqua;*/
 }
 
+.login_color {
+    color :#22222C !important;
+}
+
 .main_header {
-    color: #9d9d9d;
+    color: #9D9DA7; /*#9d9d9d;*/
     font-size: 44px;
     display: inline-block;
     font-weight: 800;
@@ -66,7 +71,8 @@ h2, .h2 {
     font-size: 24px;
     color: rgb(255,255,255);*/
     font-size: 28px;
-    color: #9d9d9d;
+    /*color: #9d9d9d;*/
+    color: #9D9DA7;
 }
 
 /*#nav_login span.user_login {
@@ -79,7 +85,7 @@ h2, .h2 {
 
 span.user_logout a {
     /*color: #fff;*/
-    color: #9d9d9d;
+    color: #9D9DA7;/*#9d9d9d;*/
 }
 
 span.user_logout a:link {
@@ -110,7 +116,7 @@ span.user_logout a:hover {
 
 .services_mnu {
     list-style-type: none;
-    margin: 0;
+    margin: 0 0 15px 0;
     padding: 0;
     width: 100%;
     /*background-color: #f1f1f1;*/
@@ -122,11 +128,11 @@ span.user_logout a:hover {
 li a {
     display: block;
     color: #222222;
-    padding: 5px 0 3px 5px;
+    padding: 6px 0 4px 6px;
     text-decoration: none;
     /*background-color: #C8C8C8;*/
     background-color: #E6E6FA;
-    border: 1px solid #000000;
+    border: 1px solid #C8C8DC;/*#D2D2E6;*/ /*#000000;*/
     margin: 0 15px 6px 15px;
     /*font-size: 21px;*/
     font-size: 14px;
@@ -135,23 +141,29 @@ li a {
     border-radius: 4px;
 }
 
-li a:hover {
+/*li a:hover {
+    background-color: #FFF;*/
+    /*color: white;*/
+    /*text-decoration: none;
+}*/
+
+
+li a:hover:not(.mnu_active) {
     background-color: #FFF;
     /*color: white;*/
     text-decoration: none;
 }
 
-
-/*li a:hover:not(a:active) {
-    background-color: #FFF;
-    /*color: white;*/
-    /*text-decoration: none;*/
+/*li a:active {*/
+    /*background-color: #22222C;*/ /*#222*/
+    /*color: #FFF;
+    text-decoration: none;*/
 /*}*/
 
-li a:active {
-    background-color: #222;
-    color: #FFF;
-    text-decoration: none;
+.mnu_active {
+    background-color: #22222C; 
+    color: #FFF !important;
+    text-decoration: none !important;
 }
 
 .left_bar_fixed {
@@ -166,7 +178,7 @@ li a:active {
 
 .left_bar {
     background-color: #F7F7FD; /*#F5F5FD;*/ /*#F8F8FD;*/
-    border: 1px solid #E1E1F6;
+    border: 1px solid #C8C8DC;/*#DCDCF0;*//*#E1E1F6;*/
     height: 100%;
     overflow-y: auto;
     padding-top: 15px;
@@ -176,12 +188,28 @@ li a:active {
 
 .main_area {
     background-color: #F7F7FD; /*darksalmon;*/
-    border: 1px solid #000000;
+    border: 1px solid #C8C8DC;/*#DCDCF0;*/ /*#000000;*/
     margin: 75px 0 0 215px;
     min-height: 600px;
-    padding: 10px 15px 15px 15px;
-    min-width: 370px;
+    padding: 7px 15px 15px 15px;
+    min-width: 320px;
     border-radius: 8px;
+}
+
+.main_area_service_header {
+    padding: 0px 0 0px 15px;
+    font-size: 21px;
+    color: #22222C;
+    margin-bottom: 0px;
+    font-weight: bold;
+}
+
+.main_area_service_header_splitter {
+    margin-top: 5px
+}
+
+.footer {
+    margin-bottom: 20px;
 }
 
 
