--- a/Code/ECMonitoring/Views/ECM/Login.cshtml
+++ b/Code/ECMonitoring/Views/ECM/Login.cshtml
@@ -4,10 +4,7 @@
     Layout = "~/Views/Shared/_EcmLayout.cshtml";
 }
 
-<div class="loggin_shift">
-    @*<h2>Вход</h2>
-        <h4>Для доступа в систему необходимо ввести имя и пароль:</h4>
-        <hr />*@
+<div class="loggin_shift login_color">
     <h2>Вход</h2>
     <h4>Для доступа в систему необходимо ввести имя и пароль:</h4>
 </div>
@@ -17,33 +14,29 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        @*<h4>Для доступа в систему необходимо ввести имя и пароль:</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2 login_color" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control login_color" } })
                 @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2 login_color" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control login_color" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Войти" class="btn btn-default" />
+                <input type="submit" value="Войти" class="btn btn-default login_color" />
             </div>
         </div>
     </div>
 }
 
-@*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
