--- a/Code/ECMonitoring/Views/ECM/MainArea.cshtml
+++ b/Code/ECMonitoring/Views/ECM/MainArea.cshtml
@@ -1,57 +1,36 @@
 ﻿@model IList<ECMonitoring.Models.EndPointModel>
 
-@*<div style="background-color:darksalmon; border: 1px solid #000000; width: 800px; height: 600px; margin: 75px 0 0 150px;">*@
-@*<div class="col-md-9">*@
 <div id="main_area" class="main_area">
-    @*<div style="background-color:darksalmon; border: 1px solid #000000; margin: 75px 0 0 0px;display:inline-block">*@
+    <div class="main_area_service_header">
+        <span>
+            @ViewData["ServiceName"]
+        </span>
+    </div>
 
-    @*<h2>Основная область</h2>*@
-    @*@{ViewData["ServiceName"] = "1234"; }*@
-    @*<h2>@ViewData["ServiceName"]</h2>
-        <br />*@
+    <hr class="main_area_service_header_splitter"/>
 
-    <div style="padding:0px 0 0px 0px; font-size: 21px; color: #222222; margin-bottom: 15px"><span>@ViewData["ServiceName"]</span></div>
-    
+    <div class="row">
+        @foreach (var endPoint in Model)
+        {
+            <div class="col-md-6">
+                <div class="end_point_main_container">
+                    <p style="margin-left: 15px;">@Html.Label(endPoint.Name)</p>
 
-    @*<div class="container">*@
-
-    @*<div style="background-color:antiquewhite; border: 1px solid #000000; padding: 0px">*@
-
-        <div class="row">
-
-            @foreach (var endPoint in Model)
-            {
-                //@Html.ActionLink(service.Name, "Index", new { serviceId = endPoint.Id });<br />
-                @*@Html.Label(endPoint.Id.ToString())<br />*@
-                @*@Html.Label(endPoint.Name)<br />*@
-
-                @*<div class="col-md-6 col-xxl-3 mb-3 pr-md-2" style="background-color:lavender; border: 1px solid #000000; width: 250px; ">*@
-                <div class="col-md-6">
-                    <div class="end_point_main_container">
-
-
-                        <p style="margin-left: 15px;">@Html.Label(endPoint.Name)</p>
-
-                        @foreach (var metric in endPoint.Metrics)
+                    @foreach (var metric in endPoint.Metrics)
+                    {
+                        if (metric.MetricType == 0)
                         {
-                            @*<p style="margin-left: 75px;">@Html.Label(metric.Name)</p>*@
-                            if (metric.MetricType == 0)
-                            {
-                                @Html.Partial("LANMetric", metric)
-                            }
-                            else
-                            {
-                                @Html.Partial("ResourceUsageMetric", metric)
-                            }
+                            @Html.Partial("LANMetric", metric)
                         }
-                    </div>
+                        else
+                        {
+                            @Html.Partial("ResourceUsageMetric", metric)
+                        }
+                    }
+
                 </div>
-            }
+            </div>
+        }
+    </div>
 
-
-
-        </div>
-    @*</div>*@
-    @*</div>*@
 </div>
-@*</div>*@
